--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -113,7 +113,7 @@ header {
 
 header ul {
   list-style:none;
-  height:40px;
+  height:50px;
   padding:0;
   background: #f4f4f4;
   border-radius:5px;
@@ -123,6 +123,7 @@ header ul {
 
 header li {
   width:89px;
+  line-height: 1px
   float:left;
   border-right:1px solid #e0e0e0;
   height:40px;
