--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -15,13 +15,18 @@ p, ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
 
+p{
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1, h2, h3 {
   line-height:1.1;
 }
 
 h1 {
+  font-family: 'Karla', sans-serif;
   font-size:28px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 h2 {
