--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,22 +34,8 @@
 
       </header>
       <section>
-        <h2>About</h2>
 
-        <p>I am an escaped academic, with an expertise in the written word, a talent for strategy, and a keen eye for design. This means that I excel at branding, social media marketing, content creation (though <a href="https://hackernoon.com/please-stop-calling-it-content-778bf3abfea3#.lr5pmrin7">I prefer to not to use that term</a>), and design. It means that whatever your brand is, I can help you make sure it realizes its full potential on the web. </p>
-      </section>
-
-      <section>
-        <h2>Writings</h2>
-        <p>I have been writing on the web for several years now, so my work is scattered all over the web. Below are the pieces that I consider some of my best work to date. So far, it is all held within the Medium platform.
-           <ul>
-             <li><a href"https://extranewsfeed.com/is-all-our-work-killing-our-future-d946773568ba#.z4fjdjj3w">Is All Our Hard Work Killing Our Future?</a></li>
-             <li><a href="https://hackernoon.com/outline-your-life-or-run-the-risk-of-failing-to-live-it-5d0704e5a355#.ihjztux1t">Outline Your Life</a></li>
-             <li><a href="https://medium.com/self-starter/entrepreneurship-is-not-the-answer-846c0a492ba8#.kijdpmoxc">Entrepreneurship is Not the Answer</a></li>
-             <li><a href="https://theascent.biz/why-startups-need-philosophers-e4fee2de6c40#.d87lidbub">Why Startups Need Philosophers</a></li>
-             <li><a href="https://extranewsfeed.com/whats-wrong-with-inspirational-and-personal-development-writing-on-medium-9a2fe3d72f0e#.lyn3lcw24">What's Wrong With Inspirational and Personal Development Writing on Medium</a></li>
-           </ul>
-         </p>
+          {{ content }}
 
       </section>
       <footer>
