--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -15,6 +15,12 @@ p, ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
 
+.title {
+  font-family: 'Libre Franklin', sans-serif;
+  font-size: 42px
+  font-weight:800;
+
+}
 
 h1, h2, h3 {
   line-height:1.1;
