--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,7 +17,7 @@ p, ul, ol, table, pre, dl {
 
 .title {
   font-family: 'Libre Franklin', sans-serif;
-  font-size: 42px
+  font-size: 42px;
   font-weight:800;
 
 }
