--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,6 +19,8 @@ p, ul, ol, table, pre, dl {
   font-family: 'Libre Franklin', sans-serif;
   font-size: 42px;
   font-weight:800;
+  text-decoration: none;
+  border-bottom: 6px solid #b30000
 
 }
 
