--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
           <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
           <section>
-            <h2>Elsewhere on the Web</h2>
+            <strong>Elsewhere on the Web</strong>
               <button type="button"><a href="https://twitter.com/aperfectsturm">Read short bits <i class="fa fa-twitter" aria-hidden="true"></i></a></button>
               <button type="button"><a href="https://medium.com/@mikesturm">Read longform <i class="fa fa-medium" aria-hidden="true"></i></a></button>
               <button type="button"><a href="mailto:mike@yourfool.com">Contact Me <i class="fa fa-envelope" aria-hidden="true"></i></a></button>
