changed page layout

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+<div>
+  <h2>{{ page.title }}</h2>
   {{ content }}
 </div>
-<div class="footer">
+<div>
 <a href="#top">Back to top of page</a>
 </div>
