--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Mike Sturm - Wordsmith</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}font-awesome/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="http://www.mikesturm.net/Skeleton/images/Alchemical.png" />
     <link href="https://fonts.googleapis.com/css?family=Karla:700|Libre+Franklin|Montserrat|Roboto" rel="stylesheet">
@@ -22,8 +22,8 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="/blog"><strong>Blog</strong></a></li>
-          <li><a href="/recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
+          <li><a href="{{ site.baseurl }}recommended-reading"><strong>Reading List</strong></a></li>
         </ul>
 
 
