--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
           <li><a href="{{ site.baseurl }}recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="{{ site.baseurl }}contact"><strong>Contact</strong></a></li>
         </ul>
 
 
