changed title, others

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="title">Mike Sturm</h1>
-        <p>Thinker, writer, <i>bon vivant</i>.</p>
+          <h1 class="title"><a href="/">Mike Sturm</a></h1>
+        
 
         <ul>
           <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
