added "." before title.a class

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -24,11 +24,11 @@ p, ul, ol, table, pre, dl {
 
 }
 
-title.a {
+.title.a {
   font-family: 'Libre Franklin', sans-serif;
   font-size: 42px;
   font-weight:800;
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 h1, h2, h3 {
