--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,6 +28,7 @@ p, ul, ol, table, pre, dl {
   font-family: 'Libre Franklin', sans-serif;
   font-size: 42px;
   font-weight:800;
+  color:#222;
   text-decoration: none;
 }
 
