--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -24,7 +24,7 @@ p, ul, ol, table, pre, dl {
 
 }
 
-.title.a {
+.title h1 a {
   font-family: 'Libre Franklin', sans-serif;
   font-size: 42px;
   font-weight:800;
