--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,16 +17,17 @@ p, ul, ol, table, pre, dl {
 
 .title {
   font-family: 'Libre Franklin', sans-serif;
-  font-size: 42px;
+  font-size: 36px;
   font-weight:800;
   text-decoration: none;
-  border-bottom: 6px solid #b30000
+  border-bottom: 6px solid #F5D04C
+  color:#222;
 
 }
 
 .title h1 a {
   font-family: 'Libre Franklin', sans-serif;
-  font-size: 42px;
+  font-size: 36px;
   font-weight:800;
   color:#222;
   text-decoration: none;
