--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -20,7 +20,7 @@ p, ul, ol, table, pre, dl {
   font-size: 36px;
   font-weight:800;
   text-decoration: none;
-  border-bottom: 6px solid #F5D04C
+  border-bottom: 4px solid #F5D04C;
   color:#222;
 
 }
