--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -215,6 +215,25 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
+button {
+    background-color: #ffffff;
+    border: 4px solid #222;
+    color: #222;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #222;
+    color: white;
+}
 @media print, screen and (max-width: 960px) {
 
   div.wrapper {
