--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -218,12 +218,12 @@ footer {
 button {
     background-color: #ffffff;
     border: 4px solid #222;
-    color: #222;
-    padding: 16px 32px;
+    color: #222 !important;
+    padding: 4px 8px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 12px;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -232,7 +232,7 @@ button {
 
 button:hover {
     background-color: #222;
-    color: white;
+    color: white !important;
 }
 @media print, screen and (max-width: 960px) {
 
