--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <header>
           <h1 class="title"><a href="/">Mike Sturm</a></h1>
-        
+
 
         <ul>
           <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
@@ -37,8 +37,9 @@
       </section>
       <footer>
 
-          <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
-          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+        <p class="view">Subscribe to my newsletter. No spamming, no selling&emdash;<i>ever</i>.</p>
+        <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+
         <br>
             <strong>Elsewhere on the Web</strong>
             <br>
@@ -47,6 +48,7 @@
               <button type="button"><a href="mailto:mike@yourfool.com">Contact Me <i class="fa fa-envelope" aria-hidden="true"></i></a></button>
           <br>
         <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
+        <br>
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
