divs in sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,20 +36,23 @@
 
       </section>
       <footer>
+        <div>
 
         <p class="view">Subscribe to my newsletter. No spamming, no selling&mdash;<i>ever</i>.</p>
         <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:160px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
-
-        <br>
+      </div>
+      <div>
             <strong>Elsewhere on the Web</strong>
             <br>
               <button type="button"><a href="https://twitter.com/aperfectsturm">Read short bits <i class="fa fa-twitter" aria-hidden="true"></i></a></button>
               <button type="button"><a href="https://medium.com/@mikesturm">Read longform <i class="fa fa-medium" aria-hidden="true"></i></a></button>
               <button type="button"><a href="mailto:mike@yourfool.com">Contact Me <i class="fa fa-envelope" aria-hidden="true"></i></a></button>
-          <br>
+      </div>
+      <div>
         <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
         <br>
         <p><small>Hosted on GitHub Pages</small></p>
+      </div>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
