--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,8 +1,8 @@
 body {
   background-color: #fff;
   padding:50px;
-  font: 15px/1.5 Roboto;
-  color:#595959;
+  font: 18px/1.5 Roboto;
+  color:#232527;
   font-weight:400;
 }
 
@@ -20,17 +20,17 @@ p, ul, ol, table, pre, dl {
   font-size: 36px;
   font-weight:800;
   text-decoration: none;
-  border-bottom: 4px solid #F5D04C;
   color:#222;
 
 }
 
 .title h1 a {
   font-family: 'Libre Franklin', sans-serif;
-  font-size: 36px;
+  font-size: 3.3em;
   font-weight:800;
   color:#222;
   text-decoration: none;
+  border-bottom: 4px solid #F5D04C;
 }
 
 h1, h2, h3 {
@@ -55,7 +55,7 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#7F848A;
   text-decoration:none;
 }
 
@@ -80,7 +80,7 @@ a:hover small {
 }
 
 blockquote {
-  border-left:1px solid #e5e5e5;
+  border-left:1px solid #F5D04C;
   margin:0;
   padding:0 0 0 20px;
   font-style:italic;
