--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,6 +9,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
+  font-weight: 700;
+}
+
+.post h1, h2, h3, h4{
+  margin-top: 55px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -60,7 +65,7 @@ a {
 }
 
 a:hover {
-  color:#069;
+  color:#F5D04C;
 }
 
 a small {
