--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,8 +12,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
-.post h1, h2, h3, h4{
+.post h1, .post h2, .post h3, .post h4{
   margin-top: 55px;
+  font-weight: 700;
 }
 
 p, ul, ol, table, pre, dl {
@@ -238,6 +239,10 @@ button {
 button:hover {
     background-color: #222;
     color: white !important;
+}
+
+h1.post-title {
+  margin-top: 0;
 }
 @media print, screen and (max-width: 960px) {
 
