--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
       <footer>
         <div>
 
-        <p class="view">Subscribe to my newsletter. No spamming, no selling&mdash;<i>ever</i>.</p>
-        <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:160px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+        <p class="view" style="text-align: center;">Subscribe to my newsletter. No spamming, no selling&mdash;<i>ever</i>.</p>
+        <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width: 200px; height: 30px;" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
       </div>
       <div>
             <strong>Elsewhere on the Web</strong>
