--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -61,8 +61,8 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#7F848A;
-  text-decoration:none;
+  color:#4C71F5;
+  text-decoration:underline;
 }
 
 a:hover {
